# AppT

./: .gitignore  pyproject.toml
accounts/: admin.py  forms.py  models.py  tests.py
accounts/migrations/: 0001_initial.py
setup/: settings.py  urls.py
templates/: base.html  home.html
