[tool.poetry]
name = "appt"
version = "0.1.0"
description = ""
authors = ["leonardo"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
environs = {extras = ["django"], version = "^11.0.0"}
black = "^24.4.2"
psycopg = {extras = ["binary"], version = "^3.1.19"}
django-extensions = "^3.2.3"
Werkzeug = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
